--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongoose": "^8.15.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0"
   },
   "description": ""
 }
